--- a/app/theory-and-ethics.html
+++ b/app/theory-and-ethics.html
@@ -18,7 +18,65 @@
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="howlader2019seer">1</a>]
+[<a name="bronfenbrenner1979ecology">1</a>]
+</td>
+<td class="bibtexitem">
+Urie Bronfenbrenner.
+ <em>The ecology of human development</em>.
+ Harvard university press, 1979.
+[&nbsp;<a href="theory-and-ethics_bib.html#bronfenbrenner1979ecology">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="evans1984heuristic">2</a>]
+</td>
+<td class="bibtexitem">
+Jonathan St&nbsp;BT Evans.
+ Heuristic and analytic processes in reasoning.
+ <em>British Journal of Psychology</em>, 75(4):451--468, 1984.
+[&nbsp;<a href="theory-and-ethics_bib.html#evans1984heuristic">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="evans2013dual">3</a>]
+</td>
+<td class="bibtexitem">
+Jonathan St&nbsp;BT Evans and Keith&nbsp;E Stanovich.
+ Dual-process theories of higher cognition: Advancing the debate.
+ <em>Perspectives on psychological science</em>, 8(3):223--241, 2013.
+[&nbsp;<a href="theory-and-ethics_bib.html#evans2013dual">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="hollen2013theory">4</a>]
+</td>
+<td class="bibtexitem">
+Patricia&nbsp;J Hollen, Richard&nbsp;J Gralla, Randy&nbsp;A Jones, Christopher&nbsp;Y Thomas,
+  David&nbsp;R Brenin, Geoffrey&nbsp;R Weiss, Anneke&nbsp;T Schroen, and Gina&nbsp;R Petroni.
+ A theory-based decision aid for patients with cancer: results of
+  feasibility and acceptability testing of decisionkeys for cancer.
+ <em>Supportive care in cancer</em>, 21(3):889--899, 2013.
+[&nbsp;<a href="theory-and-ethics_bib.html#hollen2013theory">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="howlader2019seer">5</a>]
 </td>
 <td class="bibtexitem">
 N&nbsp;Howlader, Krapcho&nbsp;M NA, D&nbsp;Miller, A&nbsp;Brest, M&nbsp;Yu, J&nbsp;Ruhl, Z&nbsp;Tatalovich,
@@ -33,7 +91,21 @@ N&nbsp;Howlader, Krapcho&nbsp;M NA, D&nbsp;Miller, A&nbsp;Brest, M&nbsp;Yu, J&nb
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="Khani2018">2</a>]
+[<a name="james1890principles">6</a>]
+</td>
+<td class="bibtexitem">
+William James, Frederick Burkhardt, Fredson Bowers, and Ignas&nbsp;K Skrupskelis.
+ <em>The principles of psychology</em>, volume&nbsp;1.
+ Macmillan London, 1890.
+[&nbsp;<a href="theory-and-ethics_bib.html#james1890principles">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Khani2018">7</a>]
 </td>
 <td class="bibtexitem">
 Francesca Khani and Brian&nbsp;D. Robinson.
@@ -49,7 +121,7 @@ Francesca Khani and Brian&nbsp;D. Robinson.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="kinlock2016racial">3</a>]
+[<a name="kinlock2016racial">8</a>]
 </td>
 <td class="bibtexitem">
 Ballington&nbsp;L Kinlock, Roland&nbsp;J Thorpe&nbsp;Jr, Daniel&nbsp;L Howard, Janice&nbsp;V Bowie,
@@ -64,7 +136,7 @@ Ballington&nbsp;L Kinlock, Roland&nbsp;J Thorpe&nbsp;Jr, Daniel&nbsp;L Howard, J
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="mohler2019prostate">4</a>]
+[<a name="mohler2019prostate">9</a>]
 </td>
 <td class="bibtexitem">
 James&nbsp;L Mohler, Emmanuel&nbsp;S Antonarakis, Andrew&nbsp;J Armstrong, et&nbsp;al.
@@ -79,7 +151,7 @@ James&nbsp;L Mohler, Emmanuel&nbsp;S Antonarakis, Andrew&nbsp;J Armstrong, et&nb
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="parse2016have">5</a>]
+[<a name="parse2016have">10</a>]
 </td>
 <td class="bibtexitem">
 Rosemarie&nbsp;Rizzo Parse.
@@ -92,7 +164,7 @@ Rosemarie&nbsp;Rizzo Parse.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="peterson2009middle">6</a>]
+[<a name="peterson2009middle">11</a>]
 </td>
 <td class="bibtexitem">
 Sandra&nbsp;J Peterson and Timothy&nbsp;S Bredow.
@@ -106,7 +178,7 @@ Sandra&nbsp;J Peterson and Timothy&nbsp;S Bredow.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="powell2013genes">7</a>]
+[<a name="powell2013genes">12</a>]
 </td>
 <td class="bibtexitem">
 Isaac&nbsp;J Powell, Greg Dyson, Susan Land, Julie Ruterbusch, Cathryn&nbsp;H Bock, Steve
@@ -123,7 +195,21 @@ Isaac&nbsp;J Powell, Greg Dyson, Susan Land, Julie Ruterbusch, Cathryn&nbsp;H Bo
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="siegel2019cancer">8</a>]
+[<a name="samuelson1938note">13</a>]
+</td>
+<td class="bibtexitem">
+Paul&nbsp;A Samuelson.
+ A note on the pure theory of consumer's behaviour.
+ <em>Economica</em>, 5(17):61--71, 1938.
+[&nbsp;<a href="theory-and-ethics_bib.html#samuelson1938note">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="siegel2019cancer">14</a>]
 </td>
 <td class="bibtexitem">
 Rebecca&nbsp;L Siegel, Kimberly&nbsp;D Miller, and Ahmedin Jemal.
@@ -137,7 +223,7 @@ Rebecca&nbsp;L Siegel, Kimberly&nbsp;D Miller, and Ahmedin Jemal.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wenzel2012cancer">9</a>]
+[<a name="wenzel2012cancer">15</a>]
 </td>
 <td class="bibtexitem">
 Jennifer Wenzel, Randy&nbsp;A Jones, Rachel Klimmek, Sharon Krumm, Linda&nbsp;P Darrell,
@@ -153,7 +239,7 @@ Jennifer Wenzel, Randy&nbsp;A Jones, Rachel Klimmek, Sharon Krumm, Linda&nbsp;P 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wenzel2015model">10</a>]
+[<a name="wenzel2015model">16</a>]
 </td>
 <td class="bibtexitem">
 Jennifer&nbsp;A Wenzel, Olive Mbah, Jiayun Xu, Gyasi Moscou-Jackson, Haneefa Saleem,
@@ -170,7 +256,7 @@ Jennifer&nbsp;A Wenzel, Olive Mbah, Jiayun Xu, Gyasi Moscou-Jackson, Haneefa Sal
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="winzelberg2005beyond">11</a>]
+[<a name="winzelberg2005beyond">17</a>]
 </td>
 <td class="bibtexitem">
 Gary&nbsp;S Winzelberg, Laura&nbsp;C Hanson, and James&nbsp;A Tulsky.
