--- a/app/theory-and-ethics_bib.html
+++ b/app/theory-and-ethics_bib.html
@@ -7,7 +7,55 @@
 </head>
 
 <body>
-<h1>theory-and-ethics.bib</h1><a name="howlader2019seer"></a><pre>
+<h1>theory-and-ethics.bib</h1><a name="bronfenbrenner1979ecology"></a><pre>
+@book{<a href="theory-and-ethics.html#bronfenbrenner1979ecology">bronfenbrenner1979ecology</a>,
+  title = {The ecology of human development},
+  author = {Bronfenbrenner, Urie},
+  year = {1979},
+  publisher = {Harvard university press}
+}
+</pre>
+
+<a name="evans1984heuristic"></a><pre>
+@article{<a href="theory-and-ethics.html#evans1984heuristic">evans1984heuristic</a>,
+  title = {Heuristic and analytic processes in reasoning},
+  author = {Evans, Jonathan St BT},
+  journal = {British Journal of Psychology},
+  volume = {75},
+  number = {4},
+  pages = {451--468},
+  year = {1984},
+  publisher = {Wiley Online Library}
+}
+</pre>
+
+<a name="evans2013dual"></a><pre>
+@article{<a href="theory-and-ethics.html#evans2013dual">evans2013dual</a>,
+  title = {Dual-process theories of higher cognition: Advancing the debate},
+  author = {Evans, Jonathan St BT and Stanovich, Keith E},
+  journal = {Perspectives on psychological science},
+  volume = {8},
+  number = {3},
+  pages = {223--241},
+  year = {2013},
+  publisher = {Sage Publications Sage CA: Los Angeles, CA}
+}
+</pre>
+
+<a name="hollen2013theory"></a><pre>
+@article{<a href="theory-and-ethics.html#hollen2013theory">hollen2013theory</a>,
+  title = {A theory-based decision aid for patients with cancer: results of feasibility and acceptability testing of DecisionKEYS for cancer},
+  author = {Hollen, Patricia J and Gralla, Richard J and Jones, Randy A and Thomas, Christopher Y and Brenin, David R and Weiss, Geoffrey R and Schroen, Anneke T and Petroni, Gina R},
+  journal = {Supportive care in cancer},
+  volume = {21},
+  number = {3},
+  pages = {889--899},
+  year = {2013},
+  publisher = {Springer}
+}
+</pre>
+
+<a name="howlader2019seer"></a><pre>
 @article{<a href="theory-and-ethics.html#howlader2019seer">howlader2019seer</a>,
   title = {SEER Cancer Statistics Review, 1975-2016 National Cancer Institute},
   author = {Howlader, N and NA, Krapcho M and Miller, D and Brest, A and Yu, M and Ruhl, J and Tatalovich, Z and Mariotto, A and Lewis, DR and Chen, HS and others},
@@ -16,14 +64,20 @@
 }
 </pre>
 
+<a name="james1890principles"></a><pre>
+@book{<a href="theory-and-ethics.html#james1890principles">james1890principles</a>,
+  title = {The principles of psychology},
+  author = {James, William and Burkhardt, Frederick and Bowers, Fredson and Skrupskelis, Ignas K},
+  volume = {1},
+  year = {1890},
+  publisher = {Macmillan London}
+}
+</pre>
+
 <a name="Khani2018"></a><pre>
 @inbook{<a href="theory-and-ethics.html#Khani2018">Khani2018</a>,
   author = {Khani, Francesca
 and Robinson, Brian D.},
-  editor = {Robinson, Brian D.
-and Mosquera, Juan Miguel
-and Ro, Jae Y.
-and Divatia, Mukul},
   title = {Racial Differences},
   booktitle = {Precision Molecular Pathology of Prostate Cancer},
   year = {2018},
@@ -84,6 +138,19 @@ and Divatia, Mukul},
   pages = {891--897},
   year = {2013},
   publisher = {AACR}
+}
+</pre>
+
+<a name="samuelson1938note"></a><pre>
+@article{<a href="theory-and-ethics.html#samuelson1938note">samuelson1938note</a>,
+  title = {A note on the pure theory of consumer's behaviour},
+  author = {Samuelson, Paul A},
+  journal = {Economica},
+  volume = {5},
+  number = {17},
+  pages = {61--71},
+  year = {1938},
+  publisher = {JSTOR}
 }
 </pre>
 
