--- a/app/index.html
+++ b/app/index.html
@@ -5288,6 +5288,8 @@ Winter Maxwell Thayer
 							<svg class="svg-right" height="250px" viewBox="0 0 408 408">
 								<use xlink:href="#automatic"></use>
 							</svg>
+							<div class="par-left-down"><p>Slow</p><p>Rational</p></div>
+							<div class="par-right-down"><p>Fast</p><p>Emotional</p></div>
 					<h6>James (1890); Evans (1984); Kahneman (2003); Evans & Stanovich (2013)</h6>
 					<div class="foot"></div>
 					<aside class="notes">
@@ -5308,7 +5310,7 @@ Winter Maxwell Thayer
 					</div>
 					<!-- <p class="par-right">Decision process model</p> -->
 					<div class="slide-content">
-					<!-- <h2>Clinical Trial Decision Making</h2> -->
+					<h2>Middle-range theory: DecisionKEYS</h2>
 							<svg viewBox="0 0 1000 200" width="100%">
 								<use xlink:href="#model-decision-keys"></use>
 								<!-- <use id="with-velocity" xlink:href="info"></use> -->
@@ -5316,7 +5318,7 @@ Winter Maxwell Thayer
 							<!-- <div id="with-velocity" class="box">velocity</div><a id="play-velocity"><span>play</span></a> -->
 					</div>
 
-					<h6>Hollen et al. 2013</h6>
+					<h6>Hollen et al., 2013</h6>
 					<div class="foot"></div>
 					<aside class="notes">
 
