added ricker function html

--- a/app/theory-and-ethics_bib 8.35.37 AM.html
+++ b/app/theory-and-ethics_bib 8.35.37 AM.html
@@ -42,19 +42,6 @@
 }
 </pre>
 
-<a name="penrod2005enhancing"></a><pre>
-@article{<a href="theory-and-ethics.html#penrod2005enhancing">penrod2005enhancing</a>,
-  title = {Enhancing methodological clarity: principle-based concept analysis},
-  author = {Penrod, Janice and Hupcey, Judith E},
-  journal = {Journal of advanced nursing},
-  volume = {50},
-  number = {4},
-  pages = {403--409},
-  year = {2005},
-  publisher = {Wiley Online Library}
-}
-</pre>
-
 <a name="hollen2013theory"></a><pre>
 @article{<a href="theory-and-ethics.html#hollen2013theory">hollen2013theory</a>,
   title = {A theory-based decision aid for patients with cancer: results of feasibility and acceptability testing of DecisionKEYS for cancer},
@@ -82,6 +69,7 @@
   title = {The principles of psychology},
   author = {James, William and Burkhardt, Frederick and Bowers, Fredson and Skrupskelis, Ignas K},
   volume = {1},
+  number = {2},
   year = {1890},
   publisher = {Macmillan London}
 }
@@ -91,6 +79,10 @@
 @inbook{<a href="theory-and-ethics.html#Khani2018">Khani2018</a>,
   author = {Khani, Francesca
 and Robinson, Brian D.},
+  editor = {Robinson, Brian D.
+and Mosquera, Juan Miguel
+and Ro, Jae Y.
+and Divatia, Mukul},
   title = {Racial Differences},
   booktitle = {Precision Molecular Pathology of Prostate Cancer},
   year = {2018},
