--- a/app/ricker.html
+++ b/app/ricker.html
@@ -2,24 +2,26 @@
 
 <html>
 <head>
+  <style>
+  body {background-color: #A7BCD6;}
+  button {color: #002D72}
+  #egg {font-size: 2em; font-family: sans-serif; color: #CF4520;}
+  </style>
 </head>
 <body>
   <div>
     <button id="myButton" onclick="countLoop()">
-      <img id="ricker" src="resources/ricker/ricker1.png"></img>
+      <img id="ricker" src="resources/ricker/ricker1.png">
     </button>
   </div>
+  <p id="egg"></p>
   <script type="text/javascript">
     const path = "resources/ricker/"
     const fileName = "ricker";
     // var i = 0;
     var index = 0;
+    var loop = 0;
     var count = "up";
-
-
-    // function timer(ms) {
-    //  return new Promise(res => setTimeout(res, ms));
-    // }
 
     function countUp() {
       console.log("You're counting up!")
@@ -31,42 +33,25 @@
       }
     }
 
-      // $('.ricker')
-      // async function load() {
-        // for (var i = 0; i < 51; i++) {
-        //   console.log(i)
-        //   thisFile = fileName + i + ".png";
-          // document.getElementById("ricker").src = path + thisFile;
-          // await timer(1000);
-        // }
-      // }
-      // count = "down"
-    // }
-
     function countDown() {
       index = index - 1
       if (index < 1) {
         count = "up";
         countUp();
+        loop = loop + 1;
         return
       }
       console.log("You're counting down!")
       thisFile = fileName + index + ".png";
       document.getElementById("ricker").src = path + thisFile;
     }
-      // async function load() {
-        // for (var i = 50; i > 0; i--) {
-        //   console.log(i)
-        //   thisFile = fileName + i + ".png";
-        //   document.getElementById("ricker").src = path + thisFile;
-          // await timer(3000);
-        // }
-      // }
-      // count = "up";
-    // }
 
     function countLoop() {
       console.log("countLoop() at index" + index)
+
+      if (loop > 10) {
+        document.getElementById("egg").innerHTML = "Man, maybe you should do something more productive with your time."
+      }
       if (count == "up") {
         // console.log(i);
         countUp();
@@ -78,50 +63,5 @@
 
     document.getElementById("myButton").onclick = function() {countLoop()};
 
-
-    // while(true){
-    // countLoop()
-
-    // }
-    // while(false)
-    // if (i < 51) {
-    //   console.log(i)
-    //   thisFile = fileName + i + ".png";
-    //   console.log(thisFile)
-    //   document.getElementById("ricker").src = path + thisFile;
-    //   i++
-    // } else {
-    //   console.log(i)
-    //   console.log(i)
-    //   thisFile = fileName + i + ".png";
-    //   i--
-    // }
-
-
-    // while(i < 51)
-    // {
-    //   console.log(i)
-    //   thisFile = fileName + i + ".png";
-    //   console.log(thisFile)
-    //   document.getElementById("ricker").src = path + thisFile;
-    //   i++
-    // }
-    // console.log(i)
-    // var i = 50;
-    // while(i > 1) {
-    //     console.log(i)
-    //     thisFile = fileName + i + ".png";
-    //     i--
-    // }
-
-    // for (var i = 0; i < 50; i++);
-    // {
-      // console.log(i)
-      // path = "resources/ricker/"
-      // fileName = "ricker";
-      // thisFile = fileName + i + ".png";
-      // console.log(thisFile)
-      // document.getElementById("ricker").src = path + thisFile;
-    // }
   </script>
 </body>
