pure svg ricker implementation

--- a/app/index.html
+++ b/app/index.html
@@ -4819,10 +4819,10 @@ Winter Maxwell Thayer
 						<!-- <svg viewBox="0 0 360 432" height=175 style="padding-right: 25px;">
 							<use xlink:href="#scalpel" class="treatment-symbol"></use>
 						</svg> -->
-						<svg viewBox="0 0 360 432" height=175>
+						<svg viewBox="0 0 360 432" height="175">
 							<use xlink:href="#pill-symbol" class="treatment-symbol" ></use>
 						</svg>
-						<svg viewBox="0 0 360 432" height=175>
+						<svg viewBox="0 0 360 432" height="175">
 							<use xlink:href="#needle" class="treatment-symbol" ></use>
 						</svg>
 					</div>
