--- a/app/index.html
+++ b/app/index.html
@@ -4276,7 +4276,7 @@ Winter Maxwell Thayer
 				<!--- Start slides -->
 				<section id="title" data-background-image="resources/university.shield.large.blue.svg" data-background-size="100%" data-background-position="-200px -100px" data-background-clip="padding-box" data-background-opacity="0.45">
 					<h1>Prostate cancer treatment decision-making</h2>
-					<small><h3>NR.120.518 Philosophical, Theoretical & Ethical Basis of Advanced Nursing Practice</h3></small>
+					<small><h3>Preliminary Oral Exam</h3></small>
 					<h4>Winter Maxwell Thayer, MSPH</h4>
 					<p id="today"></p>
 				</section>
@@ -4295,15 +4295,17 @@ Winter Maxwell Thayer
 					</div>
 					<h2>Outline</h2>
 					<div class="inSlide" height="100%">
-						<h5>Part One</h5>
+						<h5>Background</h5>
 						<ul>
-							<p>Introduction to theory</p>
-							<p>Practice setting</p>
-							<p>Middle Range Theory</p>
+							<p>Prostate Cancer</p>
+							<p>Treatment Decision Making</p>
+							<p>CHAMPION Randomized Clinical Trial</p>
+							<p>Utility Theory</p>
 						</ul>
-						<h5>Part Two</h5>
+						<h5>Methods</h5>
 						<ul>
-							<p>Application</p>
+							<p>Instrument Development</p>
+							<p>DCE Development</p>
 							<p>Analysis and evaluation</p>
 						</ul>
 					</div>
