--- a/app/index.html
+++ b/app/index.html
@@ -4294,7 +4294,7 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Outline</h2>
-					<div class="inSlide" height="100%">
+					<!-- <div class="inSlide" height="100%">
 						<h5>Background</h5>
 						<ul>
 							<p>Prostate Cancer</p>
@@ -4308,10 +4308,17 @@ Winter Maxwell Thayer
 							<p>DCE Development</p>
 							<p>Analysis and evaluation</p>
 						</ul>
+					</div> -->
+					<div class="inSlide" height="100%">
+						<h5>Background</h5>
+						<h5>CHAMPION Randomized Clinical Trial</h5>
+						<h5>Methods</h5>
 					</div>
 					<div class="foot"></div>
 					<aside class='notes'>
-						This will be the first of a two-part series that explores the the role of theory in research. First I will provide a brief introduction about theory and why we might want to think about it, then I will discuss the decisions that face advanced prostate cancer patients, and propose a middle-range theory to help us understand this phenomenon and guide research. In the second part I will step through an application of the theory, and then provide analysis and evaluation of the theory using Fawcett's criteria.
+						I will provide background about advanced prostate cancer, the
+						clinical trial in which this proposal is nested, and then I will
+						outline the proposed methods.
 					</aside>
 				</section>
 
