--- a/app/index.html
+++ b/app/index.html
@@ -4665,11 +4665,12 @@ Winter Maxwell Thayer
 				</section>
 
 
+				<!-- Start vertical theory slides -->
 				<section id="middle-range-theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4691,13 +4692,16 @@ Winter Maxwell Thayer
 					<div class="foot"></div>
 					<aside class="notes">
 						<!-- Start vertical theory slides -->
-
 					</aside>
+
+					<section>
+					</section>
+					
 				<section id="middle-range-theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4732,7 +4736,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4764,7 +4768,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4786,7 +4790,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4809,7 +4813,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4835,7 +4839,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4860,7 +4864,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4890,7 +4894,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
@@ -4918,7 +4922,7 @@ Winter Maxwell Thayer
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+							<p id="outline-progress" class="outline-indicator">Conceptual Framework</p>
 						</div>
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
