--- a/app/index.html
+++ b/app/index.html
@@ -4694,9 +4694,9 @@ Winter Maxwell Thayer
 						<!-- Start vertical theory slides -->
 					</aside>
 
-					<section>
+					<section id="middle-range-theory">
 					</section>
-					
+
 				<section id="middle-range-theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -4709,26 +4709,25 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Grand theory: Social Ecological</h2>
-							<svg class="fragment fade-out inSlide" data-fragment-index="0" viewBox="0 0 690 690" height="50%">
+							<svg class="fragment" data-fragment-index="0" viewBox="0 0 690 690" height="50%">
 								<use xlink:href="#model-se"></use>
 							</svg>
-							<svg class="fragment inSlide" data-fragment-index="0" viewBox="0 0 1008.1 639.06" height="50%">
+							<svg class="fragment" data-fragment-index="0" viewBox="0 0 1008.1 639.06" height="50%">
 								<use xlink:href="#model-se-time" style="fill: url(#linear-gradient)"></use>
 							</svg>
-							<svg class="fragment inSlide" data-fragment-index="1" viewBox="0 -400 70 570" transform="rotate(90) translate(32,-685)" height="50%" style="color: grey;">
+							<svg class="fragment" data-fragment-index="1" viewBox="0 -400 70 570" transform="rotate(90) translate(32,-685)" height="50%" style="color: grey;">
 								<use xlink:href="#up-triangle"></use>
 								<use xlink:href="#line"></use>
 							</svg>
-							<svg class="fragment inSlide" data-fragment-index="1" viewBox="0 0 500 500" height="15%" transform="translate(640,175)">
+							<svg class="fragment" data-fragment-index="1" viewBox="0 0 500 500" height="15%" transform="translate(640,175)">
 								<use xlink:href="#brain"></use>
 							</svg>
-							<svg class="fragment inSlide" data-fragment-index="1" viewBox="0 0 600 600" height="35%" transform="translate(745,121)">
+							<svg class="fragment" data-fragment-index="1" viewBox="0 0 600 600" height="35%" transform="translate(745,121)">
 								<use xlink:href="#vision"></use>
 							</svg>
 					<h6>Bronfenbrenner, 1979</h6>
 					<div class="foot"></div>
 					<aside class="notes">
-
 					</aside>
 				</section>
 
