--- a/app/index.html
+++ b/app/index.html
@@ -4664,6 +4664,15 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
+				<div class="reveal">
+					<div class="slides">
+						<section>Single Horizontal Slide</section>
+						<section>
+							<section>Vertical Slide 1</section>
+							<section>Vertical Slide 2</section>
+						</section>
+					</div>
+				</div>
 
 				<!-- Start vertical theory slides -->
 				<section id="middle-range-theory">
