--- a/app/index.html
+++ b/app/index.html
@@ -4664,6 +4664,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
+<section>
 				<div class="reveal">
 					<div class="slides">
 						<section>Single Horizontal Slide</section>
@@ -4673,6 +4674,7 @@ Winter Maxwell Thayer
 						</section>
 					</div>
 				</div>
+</section>
 
 				<!-- Start vertical theory slides -->
 				<section id="middle-range-theory">
