--- a/app/index.html
+++ b/app/index.html
@@ -4664,7 +4664,7 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-<section>
+				<section>
 				<div class="reveal">
 					<div class="slides">
 						<section>Single Horizontal Slide</section>
@@ -4674,10 +4674,11 @@ Winter Maxwell Thayer
 						</section>
 					</div>
 				</div>
-</section>
+			</section>
 
 				<!-- Start vertical theory slides -->
-				<section id="middle-range-theory">
+				<section id="vertical">
+					<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
 							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
@@ -4704,9 +4705,7 @@ Winter Maxwell Thayer
 					<aside class="notes">
 						<!-- Start vertical theory slides -->
 					</aside>
-
-					<section id="middle-range-theory">
-					</section>
+				</section>
 
 				<section id="middle-range-theory">
 					<div id="section-header" class="head">
