--- a/app/index.html
+++ b/app/index.html
@@ -4664,20 +4664,10 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
-				<section>
-				<div class="reveal">
-					<div class="slides">
-						<section>Single Horizontal Slide</section>
-						<section>
-							<section>Vertical Slide 1</section>
-							<section>Vertical Slide 2</section>
-						</section>
-					</div>
-				</div>
-			</section>
 
 				<!-- Start vertical theory slides -->
 				<section id="vertical">
+
 					<section id="theory">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -4690,7 +4680,7 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<!-- <p class="par-right">Decision process model</p> -->
-					<div class="slide-content">
+					<div class="slide-content fragment fade-out">
 					<!-- <h2>Clinical Trial Decision Making</h2> -->
 							<svg viewBox="0 0 1700 1100" width="100%">
 								<use href="#model-conceptual-theory-and-ethics"></use>
